--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"express": "^4.16.4",
 		"http-status-codes": "^2.2.0",
 		"nodemon": "^2.0.16",
-		"query-string": "^7.1.1"
+		"query-string": "^7.1.1",
+		"sqlite-async": "^1.1.3"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
